--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <h1>Password Generator</h1>
         <!-- TODO: Create an input field for password length (between 8-128 characters) -->
-        <label for="length">Password Length:</label>
-        <input type="number" id="length" value="12" min="8" max="128">
+        <label for="length">
+        <label for="lenght">Password Length:</label>
+        <input type="number"id="length" value="12" min="8" max="128">
 
         <h3>Select criteria:</h3>
         <!-- TODO: Create checkboxes for including uppercase, lowercase, numbers, and special characters -->
@@ -32,7 +33,8 @@
         <button id="generateBtn">Generate Password</button>
         
         <!-- TODO: Create a text field to display the generated password -->
-        <p id="passwordOutput"></p>
+        <label for="passwordOutput">generated password</label>
+        <input type="text" id="passwordOutput" readonly>    
 
         <!-- BONUS: Add a "Copy to Clipboard" button -->
         <button id="copyBtn">Copy to Clipboard</button>
